--- a/src/package.json
+++ b/src/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fluffyradio/alexa-app.git"
-  },
+  "repository": "git+https://github.com/fluffyradio/alexa-app.git",
   "author": "Fluffy Radio",
   "license": "MIT",
   "bugs": {
@@ -17,6 +14,10 @@
   },
   "homepage": "https://github.com/fluffyradio/alexa-app#readme",
   "dependencies": {
-    "alexa-sdk": "^1.0.7"
+    "alexa-sdk": "^1.0.7",
+    "log4js": "^1.1.0"
+  },
+  "devDependencies": {
+    "bespoken-tools": "^0.9.27"
   }
 }
