--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Fluffy Radio Alexa App",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint **/*.js; exit 0"
   },
   "repository": "git+https://github.com/fluffyradio/alexa-app.git",
   "author": "Fluffy Radio",
@@ -15,9 +16,13 @@
   "homepage": "https://github.com/fluffyradio/alexa-app#readme",
   "dependencies": {
     "alexa-sdk": "^1.0.7",
+    "aws-sdk": "^2.16.0",
     "log4js": "^1.1.0"
   },
   "devDependencies": {
-    "bespoken-tools": "^0.9.27"
+    "bespoken-tools": "^0.9.27",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb-base": "^11.1.0",
+    "eslint-plugin-import": "^2.2.0"
   }
 }
