--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint **/*.js; exit 0"
+    "lint": "eslint **/*.js *.js; exit 0"
   },
   "repository": "git+https://github.com/fluffyradio/alexa-app.git",
   "author": "Fluffy Radio",
