--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "alexa-sdk": "^1.0.7",
     "aws-sdk": "^2.16.0",
-    "log4js": "^1.1.0"
+    "log4js": "^1.1.0",
+    "request": "^2.79.0",
+    "request-promise": "^4.1.1"
   },
   "devDependencies": {
     "bespoken-tools": "^0.9.27",
