--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "alexa-sdk": "^1.0.7",
     "aws-sdk": "^2.16.0",
     "log4js": "^1.1.0",
+    "newrelic": "^1.37.2",
     "request": "^2.79.0",
     "request-promise": "^4.1.1"
   },
